create 2 tests for insertAd(), getAd()

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -72,7 +72,10 @@
 
   <div id="external-js"></div>
 
-  <button id="btn-insert-ad">Insert Ad</button>
+
+  <div id="append-ad">Append Skyscraperad Ad</div>
+  <div id="append-topbanner-ad">Append Topbanner Ad</div>
+<br/><br/>
 
   <!-- include spec files here... -->
   <script type="text/javascript" src="spec/mps_spec.js"></script>
