point host to mps dev instance

--- a/TestRunner.html
+++ b/TestRunner.html
@@ -14,11 +14,12 @@
         'site':'fandango-web'
     }
     var mpsopts={
-        'updatecorrelator':true
+        'updatecorrelator':true,
+        'host': "local.devmps.com"
     };
     var mps=mps||{};
     </script>
-    <script type="text/javascript" src="http://local.devmps.com/fetch/ext/load-fandango-web.js?path=TEST"></script>
+    <script type="text/javascript" src="http://dev-mps.nbcuni.com/fetch/ext/load-fandango-web.js?path=TEST"></script>
     <script>
         mocha.ui('bdd');
         mocha.reporter('html');
