update gruntfile and testrunner

--- a/TestRunner.html
+++ b/TestRunner.html
@@ -36,7 +36,7 @@
 
     </script>
     <!-- TEST FILES -->
-    <script type="text/javascript" src="spec/mps_spec_v2.js"></script>
+    <script type="text/javascript" src="spec/mocha_unit_tests.js"></script>
 </head>
 
 <body>
