recover old jasmine tests

--- a/TestRunner.html
+++ b/TestRunner.html
@@ -70,6 +70,7 @@
 <body>
 <h1>mps._append</h1>
 <div id="mocha-tests" class="mocha-tests">
+
     <div id="append-html"></div>
     <div id="append-html-multi"></div>
     <div id="append-html-js"></div>
@@ -79,7 +80,7 @@
     <div id="style-test">Stylesheet test.</div>
     <div id="external-style-test">External stylesheet test.</div>
     <div id="external-js"></div>
-    <div id="append-ad">Append Skyscraperad Ad</div>
+    <div id="append-ad">Append Box Ad</div>
     <div id="insert-ad">Append Topbanner Ad</div>
 </div>
 <br />
@@ -103,7 +104,7 @@
     <button onclick="mps._remove('script');">Remove all page scripts.</button>
 </div>
 <br />
-<div id="mocha"></div>
+<div id="mocha"><h1>MPS core _append tests</h1></div>
 <div id="mocha-error"></div>
 
 </body>
