update mocha test cases

--- a/TestRunner.html
+++ b/TestRunner.html
@@ -32,6 +32,7 @@
         }
     </style>
 
+    <!--<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.1/jquery.min.js"></script>-->
     <script src="node_modules/mocha/mocha.js"></script>
     <script src="node_modules/chai/chai.js"></script>
     <script src="node_modules/chai-spies/chai-spies.js"></script>
@@ -77,8 +78,10 @@
     <div id="append-html-table"></div>
     <div id="append-html-form"></div>
     <div id="append-html-escaped"></div>
+    <br/>
     <div id="style-test">Stylesheet test.</div>
     <div id="external-style-test">External stylesheet test.</div>
+    <br/>
     <div id="external-js"></div>
     <div id="append-ad">Append Box Ad</div>
     <div id="insert-ad">Append Topbanner Ad</div>
@@ -104,7 +107,7 @@
     <button onclick="mps._remove('script');">Remove all page scripts.</button>
 </div>
 <br />
-<div id="mocha"><h1>MPS core _append tests</h1></div>
+<div id="mocha"></div>
 <div id="mocha-error"></div>
 
 </body>
